--- a/html.html
+++ b/html.html
@@ -4,9 +4,67 @@
 
 <head>
     <meta charset="UTF-8">
-
-
+    <title>THE TRUTHHH!!!!!!!</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+<body>
+    <img src="Village.gif" width="600" height="50">
+    <h1>Are you SUSPICIOUS of your government??</h1>
+    <small>no..?</small>
+    <h2><strong>TOO BAD!!</strong></h2>
+    <h2>Because I have <em>proof!</em></h2>
+    <img src="tinfoilcat.jpg" alt="A cat with a tinfoil hat" width="200" height="150">
+    <img src="redeye.gif" alt="A cat with a tinfoil hat" width="200" height="150">
+    <br>
+    <hr>
+    <h2><u>is this you?</u></h2>
+    <img src="cursorpedestal.jpg" alt="A right-pointing cursor" width="100" height="100">
+    <img src="CatEyes.gif" alt="A suspicius cat" width="100" height="100">
+    <p>Yeah, it's me too. But I have some theories im sure will come true!! </p>
+    <hr>
+    <h4>PREDICTION #1: </h4>
+    <p>There will be people with <u>hundreds of billions of dollars </u> in only 30 years!!</p> <img src="money.gif" alt="A money bag" width="200" height="150">
+    <br>
+    <small>is that one of them?</small>
+    <br>
+    <h4>PREDICTION #2: </h4>
+    <p>y2k will NOT BE THE END!!!</p>
+      <img src="thinkycat.gif" alt="A thinking cat" width="75" height="75"> <p>This is me ROFL</p>
+    <h4>PREDICTION #3: </h4>
+    <p>The internet will become VERY popular :0</p>
+    <img src="UFO.gif" alt="A UFO" width="150" height="100">
+    <h4>PREDICTION #4: </h4>
+    <p> humor will be RANDOMLY GENERATED 0_o</p>
+    <p> For example:</p>
+    <ul>
+        <li>67</li>
+        <li>Arben Husenaj?</li>
+        <li>Mostly whoever that Arben is!! he must be important</li>
+    </ul>
+</body>
+<hr>
+<table>
+    <tr>
+        <th>PREDICTION</th>
+        <th>PERCENT CERTAINTY</th>
+    </tr>
+    <tr> 
+        <td>RICHNESS</td>
+        <td>98%</td>
+    </tr>
+    <tr> 
+        <td>y2k</td>
+        <td>61%</td>
+    </tr>
+    <tr> 
+        <td>POPULAR</td>
+        <td>90% (Hopefully my page!!)</td>
+    </tr>
+    <tr> 
+        <td>HUMOR???</td>
+        <td>1000%</td>
+    </tr>
+</table>
 
 
 
