--- a/html.html
+++ b/html.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="Village.gif" width="600" height="50">
-    <h1>Are you SUSPICIOUS of your government??</h1>
-    <small>no..?</small>
-    <h2><strong>TOO BAD!!</strong></h2>
-    <h2>Because I have <em>proof!</em></h2>
-    <img src="tinfoilcat.jpg" alt="A cat with a tinfoil hat" width="200" height="150">
+    <div class="right"><img src="Village.gif" width="600" height="50"></div>
+    <h1 style="text-align: center;">Are you SUSPICIOUS of your government??</h1>
+    <p style="text-align: center;"><small>no..?</small></p>
+    <h2 style="text-align: center;"><strong>TOO BAD!!</strong></h2>
     <img src="redeye.gif" alt="A cat with a tinfoil hat" width="200" height="150">
+    <div class="middle"><img src="redeye.gif" alt="A cat with a tinfoil hat" width="200" height="150"></div>
+    <div class="right"><img src="redeye.gif" alt="A cat with a tinfoil hat" width="200" height="150"></div>
+    <h2 style="text-align: center;">Because I have <em>proof!</em></h2>
+    <div class="middle"><img src="tinfoilcat.jpg" alt="A cat with a tinfoil hat" width="200" height="150"></div>
     <br>
     <hr>
     <h2><u>is this you?</u></h2>
@@ -23,13 +25,15 @@
     <p>Yeah, it's me too. But I have some theories im sure will come true!! </p>
     <hr>
     <h4>PREDICTION #1: </h4>
-    <p>There will be people with <u>hundreds of billions of dollars </u> in only 30 years!!</p> <img src="money.gif" alt="A money bag" width="200" height="150">
+    <p>There will be people with <u>hundreds of billions of dollars </u> in only 30 years!!</p> 
+    <div class="right"><img src="money.gif" alt="A money bag" width="200" height="150"></div>
     <br>
-    <small>is that one of them?</small>
+    <div class="right"><small>is that one of them?</small></div>
     <br>
     <h4>PREDICTION #2: </h4>
-    <p>y2k will NOT BE THE END!!!</p>
-      <img src="thinkycat.gif" alt="A thinking cat" width="75" height="75"> <p>This is me ROFL</p>
+    <p><u>2k will NOT BE THE END!!!</u></p>
+    <div class="middle"><img src="thinkycat.gif" alt="A thinking cat" width="75" height="75"></div>
+    <div class="middle"><p>This is me ROFL</p></div>
     <h4>PREDICTION #3: </h4>
     <p>The internet will become VERY popular :0</p>
     <img src="UFO.gif" alt="A UFO" width="150" height="100">
